@@ -1,0 +1,9 @@
+Title: domino_tasks: new check to monitor tasks on a lotus domino server via snmp
+Level: 2
+Component: checks
+Compatible: compat
+Version: 1.2.5i6
+Date: 1413358723
+Class: feature
+
+
